# PG2_game

./: CMakeLists.txt  README.md  app_settings.json  testvcpackage.cpp
resources/: basic.frag  basic.vert  tex.frag
src/: Mesh.hpp  Model.hpp  OBJloader.cpp  PG2.cpp  ShaderProgram.cpp  ShaderProgram.hpp  app.cpp  app.hpp  assets.hpp  camera.hpp  gl_err_callback.h  main.cpp
ukoly/: Final project + eval.md  README_6.md  README_7.md  README_8.md
